changed home blurb copy, changed values and gifts, updated PDF, added previous button to details page, faded background yellow

--- a/public/js/app/templates/Index.html
+++ b/public/js/app/templates/Index.html
@@ -9,13 +9,17 @@
 
 				<div class="col-xs-12 col-sm-10 landing-blurb">
 
-					<P>AFRIKA TEMBO is a documentary project by visual anthropologist Carolina Caffé and documentary photographer Fernanda Lenz in collaboration with the <span style="font-style:italic">African Wildlife Foundation</span>. During one month in Tanzania the team will produce a web series and a visual journal about elephant poaching and its impact on the economy and ecosystem.<br/>
+					<P>Is Africa able to modernize and pursue economic growth while preserving its natural resources and cultural diversity?<br/>
 					<br/>
-					AFRIKA TEMBO is an urgent call to share the stories of African people who are witnessing new models of development that can be civic examples to the world. Through the power of filmmaking, we seek to awaken a sense of responsibility for our planet so that we can call ourselves responsible citizens, who participate in solutions to local and global issues that ultimately are connected and affects each one of us.<br/>
+					AFRIKA TEMBO is a documentary project by visual anthropologist Carolina Caffé and documentary photographer Fernanda Lenz. During one month in Tanzania the team will produce a web series and a visual journal about elephant poaching and how organizations and communities in Tanzania work together to strengthen alternative models of development that are sustainable, inclusive, respect cultural diversity and the environment.<br/>
 					<br/>
-					The documentary production has been made possible by the support of The World Bank but is still in need of funding. The clock is ticking and AFRIKA TEMBO has 30 days left to find the support it needs to complete the web series.<br/>
+					With the ongoing poaching and trafficking crisis, the web series examines the plight of the African elephant from different perspectives, as told through stories set in Tanzania, a key elephant range state where poaching and trafficking are currently quite high. Episodes cover both immediate and longer-term efforts to ensure a future for elephants and the people who live alongside them.<br/>
 					<br/>
-					Join the efforts to protect african elephants and be part of the team showing that every voice counts!</P>
+					Through the power of filmmaking, we seek to awaken a sense of responsibility for our planet and inspire people to take action for local and global issues that ultimately are connected and affect each one of us.<br/>
+					<br/>
+					The documentary production has been possible with a initial support and is still in need of funding. The clock is ticking and AFRIKA TEMBO has only 25 days left to raise the $15,000 needed  to cover travel insurance, malaria pills, equipment, crew and logistic costs.<br/>
+					<br/>
+					Join the efforts to protect African elephants and be part of the team showing that every voice counts. We thank you for your donation with special gifts!</P>
 
 				</div>
 
