--- a/public/js/app/templates/jobs.html
+++ b/public/js/app/templates/jobs.html
@@ -2,29 +2,29 @@
 
     <hr>
 
-    <div class="row jobs-grid" style="background-color: rgba(255,188,0,0.6);">
+    <div class="row jobs-grid" style="background-color: rgba(255,188,0,0.4);">
 
         <form role="form">
             <div class="col-xs-4 col-sm-2">
 
                 <div class="form-group">
                     <div class="form-group">
-                        <label for="20.88" data-message='Our sincere thanks! Receive a special and limited edition AFRIKA TEMBO "thank you" postcard.</br>Estimated delivery: November 2015' data-title="" class="tt">$20</label>
-                        <input type="radio" name="payTier" id="20.88" value="20.88" class="payTier">
+                        <label for="10.59" data-message="Thank you! Your small actions lead to big changes! Receive a special and limited edition AFRIKA TEMBO 'thank you' postcard.</br>Estimated delivery: November 2015" data-title="" class="tt">$10</label>
+                        <input type="radio" name="payTier" id="10.59" value="10.59" class="payTier">
                     </div>
                 </div>
 
                 <div class="form-group">
                     <div class="form-group">
-                        <label for="36.32" data-message='Our sincere thanks! Receive a special and limited edition AFRIKA TEMBO "thank you" postcard.</br>Estimated delivery: November 2015' data-title="" class="tt">$35</label>
-                        <input type="radio" name="payTier" id="36.32" value="36.32" class="payTier">
+                        <label for="26.00" data-message="Thank you! We greatly appreciate your help. We’ll send you photos from the set in beautiful Tanzania National Parks and a THANK YOU in the credits! Receive a special and limited edition AFRIKA TEMBO 'thank you' postcard.</br>Estimated delivery: November 2015" data-title="" class="tt">$25</label>
+                        <input type="radio" name="payTier" id="26.00" value="26.00" class="payTier">
                     </div>
                 </div>
 
                 <div class="form-group">
                     <div class="form-group">
-                        <label for="62.04" data-message='Our sincere thanks! Receive a special and limited edition AFRIKA TEMBO "thank you" postcard + Receive SOUND PILLS with exclusive recordings of East African sounds and music from the expedition.</br>Estimated delivery: November 2015' data-title="" class="tt">$60</label>
-                        <input type="radio" name="payTier" id="62.04" value="62.04" class="payTier">
+                        <label for="51.75" data-message="Thank you! Your donation will ensure safety for this expedition. Receive a special and limited edition AFRIKA TEMBO 'thank you' postcard + Receive SOUND PILLS with exclusive recordings of East African sounds and music from the expedition + a customized AFRIKA TEMBO T-SHIRT.</br>Estimated delivery: November 2015" data-title="" class="tt">$50</label>
+                        <input type="radio" name="payTier" id="51.75" value="51.75" class="payTier">
                     </div>
                 </div>
 
@@ -35,25 +35,25 @@
 
                 <div class="form-group">
                     <div class="form-group">
-                        <label for="123.78" data-message='Our sincere thanks! Receive a collection of ETHNOGRAPHIC POSTCARDS with pictures and curiosities learned from the expedition + SOUND PILLS with exclusive recordings of East African sounds and music from the expedition.</br>Estimated delivery: November 2015' data-title="" class="tt">$120</label>
-                        <input type="radio" name="payTier" id="123.78" value="123.78" class="payTier">
+                        <label for="103.20" data-message="Thank you! Thank you for being part of this fight and making difference! Receive a collection of ETHNOGRAPHIC POSTCARDS with pictures and curiosities learned from the expedition + SOUND PILLS with exclusive recordings of East African sounds and music from the expedition.</br>Estimated delivery: November 2015" data-title="" class="tt">$100</label>
+                        <input type="radio" name="payTier" id="103.20" value="103.20" class="payTier">
                     </div>
                 </div>
 
                 <div class="form-group">
                     <div class="form-group">
-                        <label for="309.00" data-message='Our sincere thanks! Receive an exclusive 8,5X11’ PHOTOGRAPHIC PRINT + a customized AFRIKA TEMBO T-SHIRT + SOUND PILLS with exclusive recordings of East African sounds and music + a collection of ETHNOGRAPHIC POSTCARDS with pictures and curiosities learned from the expedition.</br>Estimated delivery: November 2015' data-title="" class="tt">$300</label>
+                        <label for="154.65" data-message="Thank you a lot!! Your help will make huge difference on this project. You’re collaborating on the fight for wildlife and culture conservation. Receive an exclusive 8,5X11’ PHOTOGRAPHIC PRINT + a customized AFRIKA TEMBO T-SHIRT + SOUND PILLS with exclusive recordings of East African sounds and music + a collection of ETHNOGRAPHIC POSTCARDS with pictures and curiosities learned from the expedition.</br>Estimated delivery: November 2015" data-title="" class="tt">$150</label>
+                        <input type="radio" name="payTier" id="154.65" value="154.65" class="payTier">
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <div class="form-group">
+                        <label for="309.00" data-message='We’re so grateful for your help. Your donation makes a BIG difference for us. We’ll be able to travel safe and ensure the necessary equipment still needed. Receive an exclusive 8,5X11’ PHOTOGRAPHIC PRINT + a customized AFRIKA TEMBO T-SHIRT + SOUND PILLS with exclusive recordings of East African sounds and music + a collection of ETHNOGRAPHIC POSTCARDS with pictures and curiosities learned from the expedition.</br>Estimated delivery: November 2015' data-title="" class="tt">$300</label>
                         <input type="radio" name="payTier" id="309.00" value="309.00" class="payTier">
                     </div>
                 </div>
 
-                <div class="form-group">
-                    <div class="form-group">
-                        <label for="514.80" data-message='Our sincere thanks! Your name CREDITED on the web series under Special Thanks + Receive TWO exclusive 8,5X11’ PHOTOGRAPHIC PRINTS + a customized AFRIKA TEMBO T-shirt + SOUND PILLS with exclusive recordings of East African sounds and music from the expedition + a collection of ETHNOGRAPHIC POSTCARDS with pictures and curiosities learned from the expedition.</br>Estimated delivery: November 2015' data-title="" class="tt">$500</label>
-                        <input type="radio" name="payTier" id="514.80" value="514.80" class="payTier">
-                    </div>
-                </div>
-
             </div>
 
 
@@ -61,21 +61,28 @@
 
                 <div class="form-group">
                     <div class="form-group">
-                        <label for="823.50" data-message='Your name CREDITED in the "above-the-line" of the web- series + Get an official DVD copy of AFRIKA TEMBO + TWO exclusive 11X17’ PHOTOGRAPHIC PRINTS + customized AFRIKA TEMBO T-SHIRT + SOUND PILLS with exclusive recordings of East African sounds and music from the expedition + a collection of ETHNOGRAPHIC POSTCARD with pictures and curiosities learned from the expedition.</br>Estimated delivery: November 2015' data-title="" class="tt">$800</label>
+                        <label for="514.80" data-message='You have made the decisive gesture in protection african elephants and are making an urgent call to action through your support! With your help we’ll be able to pay a sound recordist and give to the Tanzanians empowerment and voice. Have your name CREDITED on the web series under Special Thanks + Receive TWO exclusive 8,5X11’ PHOTOGRAPHIC PRINTS + a customized AFRIKA TEMBO T-shirt + SOUND PILLS with exclusive recordings of East African sounds and music from the expedition + a collection of ETHNOGRAPHIC POSTCARDS with pictures and curiosities learned from the expedition.</br>Estimated delivery: November 2015' data-title="" class="tt">$500</label>
+                        <input type="radio" name="payTier" id="514.80" value="514.80" class="payTier">
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <div class="form-group">
+                        <label for="823.50" data-message='THANK YOU for making AFRIKA TEMBO a reality. We will honor your incredible support with your name CREDITED in the "above-the-line" of the web- series + Get an official DVD copy of AFRIKA TEMBO + TWO exclusive 11X17’ PHOTOGRAPHIC PRINTS + customized AFRIKA TEMBO T-SHIRT + SOUND PILLS with exclusive recordings of East African sounds and music from the expedition + a collection of ETHNOGRAPHIC POSTCARD with pictures and curiosities learned from the expedition.</br>Estimated delivery: November 2015' data-title="" class="tt">$800</label>
                         <input type="radio" name="payTier" id="823.50" value="823.50" class="payTier">
                     </div>
                 </div>
 
                 <div class="form-group">
                     <div class="form-group">
-                        <label for="1286.55" data-message="Your contribution will help us not only film the web series, but begin the process of editing and post-production. THANK YOU!</br>You will be featured as one of the an OFFICIAL SUPPORTER of AFRIKA TEMBO! Your name will be CREDITED in the 'above-the-line' in the credits, website, and all promotional and event materials + Receive access to behind the scenes footage as well as the Director's Cut + Get an official DVD copy + AFRIKA TEMBO T-Shirt + SOUND PILLS with exclusive recordings of East African sounds and music + a collection of ETHNOGRAPHIC POSTCARD with pictures and curiosities learned from the expedition + THREE exclusive 11X17’ photographic prints.</br>Estimated delivery: November 2015" data-title="" class="tt">$1250</label>
+                        <label for="1286.55" data-message="MAKE A MARK! Your contribution will help us not only film the web series, but begin the process of editing and post-production. THANK YOU! Your contribution makes you such an integral part of our team, you will be featured as one of the an OFFICIAL SUPPORTER of AFRIKA TEMBO! Have your name will be CREDITED in the 'above-the-line' in the credits, website, and all promotional and event materials + Receive access to behind the scenes footage as well as the Director's Cut + Get an official DVD copy + AFRIKA TEMBO T-Shirt + SOUND PILLS with exclusive recordings of East African sounds and music + a collection of ETHNOGRAPHIC POSTCARD with pictures and curiosities learned from the expedition + THREE exclusive 11X17’ photographic prints.</br>Estimated delivery: November 2015" data-title="" class="tt">$1250</label>
                         <input type="radio" name="payTier" id="1286.55" value="1286.55" class="payTier">
                     </div>
                 </div>
 
                 <div class="form-group">
                     <div class="form-group">
-                        <label for="2058.30" data-message="Your contribution will help us not only film the web series, but begin the process of editing and post-production. THANK YOU!</br>You will be featured as one OFFICIAL SUPPORTER of AFRIKA TEMBO! Your name will be CREDITED in the 'above-the-line' in the credits, website, and all promotional and event materials + Receive access to behind the scenes footage as well as the Director's Cut + Get an official DVD copy + AFRIKA TEMBO T-Shirt + SOUND PILLS with exclusive recordings of East African sounds and music + a collection of ETHNOGRAPHIC POSTCARD with pictures and curiosities learned from the expedition + FIVE exclusive 11X17’ photographic prints.</br>Estimated delivery: November 2015" data-title="" class="tt">$2000</label>
+                        <label for="2058.30" data-message="You're an 'Executive Producer' and your generosity astounds us. Your contribution will help us not only to make this project a reality, but begin the process of editing and post-production. THANK YOU!</br>You will be featured as one OFFICIAL SUPPORTER of AFRIKA TEMBO. Your name will be CREDITED in the 'above-the-line' in the credits, website, and all promotional and event materials + Receive access to behind the scenes footage as well as the Director's Cut + Get an official DVD copy + AFRIKA TEMBO T-Shirt + SOUND PILLS with exclusive recordings of East African sounds and music + a collection of ETHNOGRAPHIC POSTCARD with pictures and curiosities learned from the expedition + FIVE exclusive 11X17’ photographic prints.</br>Estimated delivery: November 2015" data-title="" class="tt">$2000</label>
                         <input type="radio" name="payTier" id="2058.30" value="2058.30" class="payTier">
                     </div>
                 </div>
