--- a/public/js/app/templates/details.html
+++ b/public/js/app/templates/details.html
@@ -3,7 +3,7 @@
     <hr>
 
 
-    <div class="row" style="background-color: rgba(255,188,0,0.6);">
+    <div class="row" style="background-color: rgba(255,188,0,0.4);">
 
         <div class="col-xs-12 col-sm-6 col-md-6" style="padding:15px;">
             <form role="form">
@@ -39,5 +39,9 @@
         </div>
 
     </div>
+
+
+    <a href="javascript:history.back()" class="btn btn-lg btn-warning" style="position:absolute; right:200px">← Previous</a>
+
 
 </div>
