--- a/public/js/app/templates/Index.html
+++ b/public/js/app/templates/Index.html
@@ -26,7 +26,7 @@
 			</div>
 
 			<div class="row">
-					<a href="/afrika_tembo.pdf" class="btn btn-lg btn-warning" style="margin-right:15px">LEARN MORE</a>
+					<a href="Afrika_Tembo.pdf" class="btn btn-lg btn-warning" style="margin-right:15px">LEARN MORE</a>
 					<a href="#signup" class="btn btn-lg btn-warning">DONATE</a>
 			</div>
 		</div>
