changed donate to direct paypal bubutton, updated PDF, updated copy

--- a/public/js/app/templates/Index.html
+++ b/public/js/app/templates/Index.html
@@ -9,25 +9,28 @@
 
 				<div class="col-xs-12 col-sm-10 landing-blurb">
 
-					<P>Is Africa able to modernize and pursue economic growth while preserving its natural resources and cultural diversity?<br/>
+					<P>AFRIKA TEMBO is a documentary project by visual anthropologist Carolina Caffé and documentary photographer Fernanda Lenz. During  a month in Tanzania the team will produce a web series and a visual journal about the rapidly decline of african elephant with the risk to be extint in the next few decades.<br/>
 					<br/>
-					AFRIKA TEMBO is a documentary project by visual anthropologist Carolina Caffé and documentary photographer Fernanda Lenz. During one month in Tanzania the team will produce a web series and a visual journal about elephant poaching and how organizations and communities in Tanzania work together to strengthen alternative models of development that are sustainable, inclusive, respect cultural diversity and the environment.<br/>
-					<br/>
-					With the ongoing poaching and trafficking crisis, the web series examines the plight of the African elephant from different perspectives, as told through stories set in Tanzania, a key elephant range state where poaching and trafficking are currently quite high. Episodes cover both immediate and longer-term efforts to ensure a future for elephants and the people who live alongside them.<br/>
+					Does Africa have to choose between modernization and wildlife? The project will document how organizations, authorities and communities are joining efforts to find economic solutions that can ensure that conservation goes hand in hand with productivity.<br/>
 					<br/>
 					Through the power of filmmaking, we seek to awaken a sense of responsibility for our planet and inspire people to take action for local and global issues that ultimately are connected and affect each one of us.<br/>
 					<br/>
-					The documentary production has been possible with a initial support and is still in need of funding. The clock is ticking and AFRIKA TEMBO has only 25 days left to raise the $15,000 needed  to cover travel insurance, malaria pills, equipment, crew and logistic costs.<br/>
+					The documentary production has been possible with a initial support but is still in need of funding. We ask for your help and we thank you with special gifts!<br/>
 					<br/>
-					Join the efforts to protect African elephants and be part of the team showing that every voice counts. We thank you for your donation with special gifts!</P>
+					Join the efforts to protect African elephants and be part of the team showing that every voice counts.</P>
 
 				</div>
 
 			</div>
 
 			<div class="row">
-					<a href="Afrika_Tembo.pdf" class="btn btn-lg btn-warning" style="margin-right:15px">LEARN MORE</a>
-					<a href="#signup" class="btn btn-lg btn-warning">DONATE</a>
+					<form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+					<a href="Afrika_Tembo.pdf" class="btn btn-lg btn-warning" style="margin-right:15px;margin-top:-40px">LEARN MORE</a>
+					<input type="hidden" name="cmd" value="_s-xclick">
+					<input type="hidden" name="hosted_button_id" value="D2UVDDJBYA8XY">
+					<input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+					</form>
+
 			</div>
 		</div>
 	</div>
