--- a/public/js/app/templates/Index.html
+++ b/public/js/app/templates/Index.html
@@ -9,13 +9,13 @@
 
 				<div class="col-xs-12 col-sm-10 landing-blurb">
 
-					<P>AFRIKA TEMBO is a documentary project by visual anthropologist Carolina Caffé and documentary photographer Fernanda Lenz. During  a month in Tanzania the team will produce a web series and a visual journal about the rapidly decline of african elephant with the risk to be extint in the next few decades.<br/>
+					<P>AFRIKA TEMBO is a documentary project by visual anthropologist Carolina Caffé and documentary photographer Fernanda Lenz. The team will spend a month in Tanzania producing both a web series and a visual journal about the rapid decline of the African elephant population, and their risk of extinction within the next few decades.<br/>
 					<br/>
-					Does Africa have to choose between modernization and wildlife? The project will document how organizations, authorities and communities are joining efforts to find economic solutions that can ensure that conservation goes hand in hand with productivity.<br/>
+					Does Africa have to choose between modernization and wildlife? The project will document how organizations and communities are joining efforts to promote development hand in hand with conservation.<br/>
 					<br/>
-					Through the power of filmmaking, we seek to awaken a sense of responsibility for our planet and inspire people to take action for local and global issues that ultimately are connected and affect each one of us.<br/>
+					Through the power of filmmaking, we seek to awaken a sense of responsibility for our planet and inspire people to take action on local and global issues that are ultimately connected and affect each one of us.<br/>
 					<br/>
-					The documentary production has been possible with a initial support but is still in need of funding. We ask for your help and we thank you with special gifts!<br/>
+					The clock is ticking, and AFRIKA TEMBO has a couple of days to raise the funding that is still missing. We ask for your help and we thank you with special gifts!<br/>
 					<br/>
 					Join the efforts to protect African elephants and be part of the team showing that every voice counts.</P>
 
