updated paypal sdk to 1.6.8, change nominate page and updated model, field checker and copy to make the new fields work

--- a/public/js/app/templates/Index.html
+++ b/public/js/app/templates/Index.html
@@ -1,15 +1,15 @@
 <div class="container">
 	<div class="row">
 		<div class="col-xs-12 text-left" style="margin-top: 2%">
-			<h1 class="titleText">Midnight Summer Moon</h1>
-			<h2 class="subTitleText">7-4-2015</h2>
+			<h1 class="titleText">Jani + Lewis</h1>
+			<h2 class="subTitleText">7-23-2016</h2>
 			<h4 class="subTitleText"><%= tickets %> spots remaining.</h4>
 
 
 			<% if(tickets === 0) { %>
 				<a class="btn btn-lg btn-danger" style="pointer-events:none">Registration Closed</a>
 			<% } else { %>
-				<a href="#signup" class="btn btn-lg btn-warning">Get yours now!</a>
+				<a href="#signup" class="btn btn-lg btn-warning">Click here to RSVP</a>
 			<% } %>
 
 		</div>
