--- a/public/js/app/templates/details.html
+++ b/public/js/app/templates/details.html
@@ -11,21 +11,35 @@
         <div class="col-xs-12 col-sm-6">
             <form role="form">
                 <div class="form-group">
-                    <input type="text" class="form-control" id="first-name" placeholder="Your First Name">
+                    <input type="text" class="form-control" id="party-name" placeholder="Name of your Party">
                 </div>
                 <div class="form-group">
-                    <input type="text" class="form-control" id="last-name" placeholder="Your Last Name">
+                    <input type="email" class="form-control" id="email" placeholder="Best Email to Contact You">
                 </div>
-                <div class="form-group">
-                    <input type="email" class="form-control" id="email" placeholder="Your Email">
+                <div class="row">
+                    <div class="col-xs-12 col-sm-6">
+                        <div class="form-group">
+                            <input type="number" class="form-control" id="num-adults" placeholder="Number of Adults">
+                        </div>
+                    </div>
+                    <div class="col-xs-12 col-sm-6">
+                        <div class="form-group">
+                            <input type="number" class="form-control" id="num-kids" placeholder="Number of Kids">
+                        </div>
+                    </div>
+                    <div class="col-xs-12 col-sm-6 col-sm-offset-6">
+                        <div class="form-group">
+                            <input type="text" class="form-control" id="age-kids" placeholder="Age of Kids">
+                        </div>
+                    </div>
                 </div>
             </form>
         </div>
 
         <div class="col-xs-12 col-sm-6">
-            <h6>PLEASE fill out ALL fields on this site (including picking an activity and writing in a food or dish) or you will not receive your confirmation email and directions!</h6>
+            <h6>Please fill out all required fields in order to receive your confirmation email. Please create one RSVP per party. Thank you!</h6>
 
-            <p>Your confirmation will be sent to the email you provide. Your information will not be distributed to any corporate entities, government agencies, multidimensional beings, or sentient robots.</p>
+            <p>Your confirmation will be sent to the email you provide. Your information will not be distributed in any way.</p>
 
         </div>
     </div>
