--- a/public/js/app/templates/details.html
+++ b/public/js/app/templates/details.html
@@ -2,10 +2,6 @@
 
     <hr>
 
-    <h3>Nominate:</h3>
-
-    <hr>
-
     <div class="row">
 
         <div class="col-xs-12 col-sm-6">
@@ -37,7 +33,7 @@
         </div>
 
         <div class="col-xs-12 col-sm-6">
-            <h6>Please fill out all required fields in order to receive your confirmation email. Please create one RSVP per party. Thank you!</h6>
+            <h6>Please create one RSVP per party. Please fill out all required fields in order to receive your confirmation email. Thank you!</h6>
 
             <p>Your confirmation will be sent to the email you provide. Your information will not be distributed in any way.</p>
 
