--- a/public/css/bootstrap.css
+++ b/public/css/bootstrap.css
@@ -2395,8 +2395,7 @@ fieldset[disabled] .btn-primary.active {
 
 .btn-warning {
   color: #ffffff;
-  background-color: #f0ad4e;
-  border-color: #eea236;
+  border-color: #d4c95d;
 }
 
 .btn-warning:hover,
@@ -2405,8 +2404,8 @@ fieldset[disabled] .btn-primary.active {
 .btn-warning.active,
 .open .dropdown-toggle.btn-warning {
   color: #ffffff;
-  background-color: #ed9c28;
-  border-color: #d58512;
+  background-color: #d4c95d;
+  border-color: #d4c95d;
 }
 
 .btn-warning:active,
