--- a/public/js/app/templates/Signup.html
+++ b/public/js/app/templates/Signup.html
@@ -1,11 +1,8 @@
 <div class="container">
   <div class="row">
-    <div class="col-xs-12">
-      <h1 class="titleText">Jani + Lewis</h1>
-    </div>
-  </div>
-  <div class="row">
   	<div class="col-xs-12 wizard-contents">
+      <h2 class="titleText">JANI AND LEWIS</h2>
+      <hr>
     	<div id="wizard-container"></div>
   	</div>
   </div>
