--- a/public/js/app/templates/food.html
+++ b/public/js/app/templates/food.html
@@ -2,15 +2,111 @@
 
     <hr>
 
-    <h3>Food List</h3>
-
-    <hr>
-
     <div class="row">
 
         <form role="form">
 
             <div class="col-xs-12 col-sm-3">
+
+                <h3>Arrival</h3>
+
+                <hr>
+
+                <div class="form-group">
+                    <% if(arrival1 === 0) { %>
+                        <input type="radio" name="jobs" id="arrival1" disabled>
+                        <label data-message="Please choose another option." data-title="Thursday 7/21" class="tt red" for="arrival1">Thursday 7/21</label>
+                    <% } else { %>
+                        <input type="radio" name="jobs" id="arrival1">
+                        <label data-message="Help set up dinner, select from what food people have brought, and prepare a couple of large dishes (dal, soup, etc.) for all to enjoy. Please bring the necessary ingredients to make your dish. Coordinate with other helpers to have dinner ready by sundown. For the light dinner please no meat, dairy, or anything that will unsettle the stomach." data-title="Thursday 7/21" class="tt" for="arrival1">Thursday 7/21</label>
+                    <% } %>
+
+                </div>
+
+                <div class="form-group">
+                    <% if(arrival2 === 0) { %>
+                        <input type="radio" name="jobs" id="arrival2" disabled>
+                        <label data-message="Please choose another option." data-title="Friday 7/22" class="tt red" for="arrival2">Friday 7/22</label>
+                    <% } else { %>
+                        <input type="radio" name="jobs" id="arrival2">
+                        <label data-message="Help set up brunch, select from what food people have brought, and prepare a couple of large dishes (scramble, breakfast burritos, etc.) for all to enjoy. Please bring the necessary ingredients to make your dish. Coordinate with other helpers to have brunch ready by 11 am." data-title="Friday 7/22" class="tt" for="arrival2">Friday 7/22</label>
+                    <% } %>
+                </div>
+
+                <div class="form-group">
+                    <% if(arrival3 === 0) { %>
+                        <input type="radio" name="jobs" id="arrival3" disabled>
+                         <label data-message="Please choose another option." data-title="Saturday 7/23" class="tt red" for="arrival3">Saturday 7/23</label>
+                    <% } else { %>
+                        <input type="radio" name="jobs" id="arrival3">
+                         <label data-message="Clean up post brunch on Sunday and encourage everyone to wash their dishes. Pack up and distribute any extra food or unused produce. Make sure all dishes are dried and put away, counters are wiped down, and that the dining room and kitchen are spotless before we all head back to the city!" data-title="Saturday 7/23" class="tt" for="arrival3">Saturday 7/23</label>
+                    <% } %>
+
+                </div>
+
+            </div>
+
+        </form>
+
+        <form role="form">
+
+            <div class="col-xs-12 col-sm-3">
+
+                <h3>Accommodation</h3>
+
+                <hr>
+
+                <div class="form-group">
+                    <% if(accommodation1 === 0) { %>
+                        <input type="radio" name="jobs" id="accommodation1" disabled>
+                         <label data-message="Please choose another option." data-title="Tent" class="tt red" for="accommodation1">Tent (<%= accommodation1 %>)</label>
+                    <% } else { %>
+                        <input type="radio" name="jobs" id="accommodation1">
+                         <label data-message="Clean up post brunch on Sunday and encourage everyone to wash their dishes. Pack up and distribute any extra food or unused produce. Make sure all dishes are dried and put away, counters are wiped down, and that the dining room and kitchen are spotless before we all head back to the city!" data-title="Tent" class="tt" for="accommodation1">Tent (<%= accommodation1 %>)</label>
+                    <% } %>
+
+                </div>
+
+                <div class="form-group">
+                    <% if(accommodation2 === 0) { %>
+                        <input type="radio" name="jobs" id="accommodation2" disabled>
+                         <label data-message="Please choose another option." data-title="RV" class="tt red" for="accommodation2">RV (<%= accommodation2 %>)</label>
+                    <% } else { %>
+                        <input type="radio" name="jobs" id="accommodation2">
+                         <label data-message="Clean up post brunch on Sunday and encourage everyone to wash their dishes. Pack up and distribute any extra food or unused produce. Make sure all dishes are dried and put away, counters are wiped down, and that the dining room and kitchen are spotless before we all head back to the city!" data-title="RV" class="tt" for="accommodation2">RV (<%= accommodation2 %>)</label>
+                    <% } %>
+
+                </div>
+
+                <div class="form-group">
+                    <% if(accommodation3 === 0) { %>
+                        <input type="radio" name="jobs" id="accommodation3" disabled>
+                         <label data-message="Please choose another option." data-title="Hotel" class="tt red" for="accommodation3">Hotel</label>
+                    <% } else { %>
+                        <input type="radio" name="jobs" id="accommodation3">
+                         <label data-message="Clean up post brunch on Sunday and encourage everyone to wash their dishes. Pack up and distribute any extra food or unused produce. Make sure all dishes are dried and put away, counters are wiped down, and that the dining room and kitchen are spotless before we all head back to the city!" data-title="Hotel" class="tt" for="accommodation3">Hotel</label>
+                    <% } %>
+
+                </div>
+
+                <div class="form-group">
+                    <% if(accommodation4 === 0) { %>
+                        <input type="radio" name="jobs" id="accommodation4" disabled>
+                         <label data-message="Please choose another option." data-title="House/Friends" class="tt red" for="accommodation4">House/Friends</label>
+                    <% } else { %>
+                        <input type="radio" name="jobs" id="accommodation4">
+                         <label data-message="Clean up post brunch on Sunday and encourage everyone to wash their dishes. Pack up and distribute any extra food or unused produce. Make sure all dishes are dried and put away, counters are wiped down, and that the dining room and kitchen are spotless before we all head back to the city!" data-title="House/Friends" class="tt" for="accommodation4">House/Friends</label>
+                    <% } %>
+
+                </div>
+
+            </div>
+
+
+
+
+
+<!--             <div class="col-xs-12 col-sm-3">
                 <div id="food-clone" class="form-group">
                     <input type="text" class="form-control food-input" placeholder="Food Item or Dish">
                 </div>
@@ -28,7 +124,7 @@
                     <% } %>
                 </ul>
             </div>
-
+ -->
         </form>
 
         <div class="col-xs-12 col-sm-6">
@@ -36,6 +132,11 @@
             <p>We will have a potluck for both the light dinner on Saturday and brunch on Sunday. Please bring as much prepared food as possible since access to the kitchen will be limited. For the light dinner please no meat, dairy, or anything that will unsettle the stomach.</p>
 
             <p>On the left is a list of foods people are already bringing. Try to choose something not yet on the list so we don't end up with a bunch of kale and eggs! If for some reason you are running late and didn't have time to buy food, don't despair! There is a great grocery store nearby with basic organic produce. For any specialty items however, making your purchases in the city ahead of time is your best bet (Tops Friendly Market  NY-32, Greenville, NY 12083).</p>
+
+            <br/>
+            
+            <h4 class="item-title"></h4>
+            <p class="item-description"></p>
 
         </div>
     </div>
