--- a/public/js/app/templates/pay.html
+++ b/public/js/app/templates/pay.html
@@ -156,7 +156,7 @@
 
         <div class="col-xs-12 col-sm-4">
 
-            <p>Almost done! Donations start at $100 (Paypal's processing fee is 2.9% + $0.30) to cover basics for each attendee; any contribution beyond that is a 'thank you gift' to our musicians. Please note that there is no exchange for donating more than $100 and that the handful of rooms will still be assigned on a first-come-first-served basis.</br></br>
+            <p>Thank you so much for your support! (Paypal's processing fee is 2.9% + $0.30)</br></br>
             Your credit card information is secured by an SSL (Secure Socket Layer) connection to Paypal, where your donation will be processed. All your sensitive information is encrypeted when it leaves your browser :)</p>
 
             <hr>
