--- a/public/css/includes/css/custom.css
+++ b/public/css/includes/css/custom.css
@@ -15,6 +15,7 @@ body {
   -moz-background-size: 100% auto;
   -o-background-size: 100% auto;
   background-size: 100% auto;
+  background-color: #423f42;
 }
 hr {
   border-color: #4d4d4d;
